heavy calculation/filtering done

--- a/Capstone 1 Instacart.ipynb
+++ b/Capstone 1 Instacart.ipynb
@@ -2259,27 +2259,374 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 775,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                            product_name  orders\n",
+      "0                       Chocolate Fudge Greek Yogurt Bar       4\n",
+      "1                            Wild Watermelon Chewing Gum     147\n",
+      "2      Fragrance Free Crystal Body Deodorant Roll On ...      41\n",
+      "3              Pineapple Tidbits in 100% Pineapple Juice     464\n",
+      "4                            Diet Raspberry Iced Tea Mix       5\n",
+      "...                                                  ...     ...\n",
+      "44648               Hot (101305, 101352) Italian Sausage     997\n",
+      "44649              Lavender Flowers Soap for Hand & Body      12\n",
+      "44650            Meyer Lemon Creamy Cleanser Brightening      15\n",
+      "44651                    Delights Lemon Supreme Bars Mix      18\n",
+      "44652                 Diet Sparkling Beverage Orange Dry       8\n",
+      "\n",
+      "[44653 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#15.1 Query everything with the keyword \"organic\" in its name\n",
+    "query = '''SELECT product_name\n",
+    "            FROM products\n",
+    "            WHERE product_name LIKE \"%Organic%\"'''\n",
+    "\n",
+    "organics_df = spark.sql(query).toPandas()\n",
+    "\n",
+    "non_organics_df.replace(to_replace ='Organic', value = '', regex = True, inplace=True)\n",
+    "# print(non_organics_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 800,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unwanted_dept_ids = (5, 7, 11, 17, 21)\n",
+    "query = '''SELECT sub_query.product_name, COUNT(orders_prior.order_id) as organic_orders\n",
+    "            FROM(\n",
+    "                SELECT *\n",
+    "                FROM products\n",
+    "                WHERE product_name LIKE \"%Organic%\") as sub_query\n",
+    "            LEFT JOIN orders_prior\n",
+    "            ON orders_prior.product_id = sub_query.product_id\n",
+    "            WHERE sub_query.department_id NOT IN (5,7,11,17,21)\n",
+    "            GROUP BY sub_query.product_name\n",
+    "                '''\n",
+    "# print(spark.sql(query).count())\n",
+    "total_organic_orders = spark.sql(query).toPandas()\n",
+    "\n",
+    "query = '''SELECT sub_query.product_name, COUNT(orders_prior.order_id) as non_organic_orders\n",
+    "            FROM(\n",
+    "                SELECT *\n",
+    "                FROM products\n",
+    "                WHERE product_name NOT LIKE \"%Organic%\") as sub_query\n",
+    "            LEFT JOIN orders_prior\n",
+    "            ON orders_prior.product_id = sub_query.product_id\n",
+    "            WHERE sub_query.department_id NOT IN (5,7,11,17,21)\n",
+    "            GROUP BY sub_query.product_name\n",
+    "                '''\n",
+    "# print(spark.sql(query).count())\n",
+    "total_non_organic_orders = spark.sql(query).toPandas()\n",
+    "# spark.sql(query).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 870,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asdf 0\n",
+      "                              product_name  organic_orders\n",
+      "0                 Organic Bulgarian Yogurt             699\n",
+      "1       Organic Whole Peeled Plum Tomatoes            1289\n",
+      "5                     Organic Lentil Beans            3287\n",
+      "10                     Organic Heavy Cream             822\n",
+      "13              Organic White Wine Vinegar            1121\n",
+      "...                                    ...             ...\n",
+      "4001                   Organic Red Lentils            7836\n",
+      "4005           Organic Large Grade AA Eggs             488\n",
+      "4009                   Organic Ginger Root           52087\n",
+      "4019                  Organic Carrot Bunch           35820\n",
+      "4021  Organic Madagascar Vanilla Ice Cream             380\n",
+      "\n",
+      "[1010 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_organic_keyword_df = total_organic_orders.replace(to_replace = 'Organic ', value = '', regex = True)\n",
+    "org_and_non_org_df = no_organic_keyword_df.product_name.isin(total_non_organic_orders.product_name)\n",
+    "organic_side_df = total_organic_orders[org_and_non_org_df]\n",
+    "\n",
+    "non_org_df = total_non_organic_orders.product_name.isin(organic_side_df.product_name)\n",
+    "print(organic_side_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 893,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "striped_keyword = organic_side_df.replace(to_replace = 'Organic ', value = '', regex=True)\n",
+    "striped_keyword.product_name.isin(total_non_organic_orders.product_name)\n",
+    "\n",
+    "full_keyword = organic_side_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 923,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DO NOT DELETE\n",
+    "non_organic_names_list = []\n",
+    "\n",
+    "for name in total_non_organic_orders.product_name:\n",
+    "    for non_org_name in striped_keyword.product_name:\n",
+    "        if non_org_name == name:\n",
+    "            non_organic_names_list.append(name)\n",
+    "            break\n",
+    "\n",
+    "added_org_keyword = [\"Organic \" + name for name in non_organic_names_list]\n",
+    "organic_names_list = [] \n",
+    "\n",
+    "for name in added_org_keyword:\n",
+    "    for org_name in organic_side_df.product_name:\n",
+    "        if org_name == name:\n",
+    "            organic_names_list.append(name)\n",
+    "            break\n",
+    "\n",
+    "drop_org_keyword = [word.replace('Organic ', '') for word in organic_names_list]\n",
+    "non_organic_names_list_2 = []\n",
+    "\n",
+    "for name in drop_org_keyword:\n",
+    "    for org_name in striped_keyword.product_name:\n",
+    "        if org_name == name:\n",
+    "            non_organic_names_list_2.append(name)\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 926,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Organic Chunky Medium Salsa', 'Organic Cranberry Walnut Salad', 'Organic Papaya', 'Organic Raw Cashews', 'Organic Whole Peeled Plum Tomatoes']\n",
+      "['Chunky Medium Salsa', 'Cranberry Walnut Salad', 'Papaya', 'Raw Cashews', 'Whole Peeled Plum Tomatoes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# #Check\n",
+    "# print(sorted(organic_names_list[:5]))\n",
+    "# print(sorted(non_organic_names_list_2[:5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 928,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "953\n",
+      "953\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check\n",
+    "organic_names_series = pd.Series(sorted(organic_names_list))\n",
+    "non_organic_names_series = pd.Series(sorted(non_organic_names_list_2))\n",
+    "# print(len(organic_names_series))\n",
+    "# print(len(non_organic_names_series))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 936,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "953\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# organicc_df = organic_names_series.isin(total_organic_orders.product_name)\n",
+    "# non_organicc_df = non_organic_names_series.isin(total_non_organic_orders.product_name)\n",
+    "# print(organicc_df)\n",
+    "# print(non_organicc_df)\n",
+    "\n",
+    "non_org_bool_filter = total_non_organic_orders.product_name.isin(non_organic_names_series)\n",
+    "org_bool_filter = total_organic_orders.product_name.isin(organic_names_series)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 902,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>organic_orders</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Organic Bulgarian Yogurt</td>\n",
+       "      <td>699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Organic Whole Peeled Plum Tomatoes</td>\n",
+       "      <td>1289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Organic Lentil Beans</td>\n",
+       "      <td>3287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Organic Heavy Cream</td>\n",
+       "      <td>822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Organic White Wine Vinegar</td>\n",
+       "      <td>1121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4001</th>\n",
+       "      <td>Organic Red Lentils</td>\n",
+       "      <td>7836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4005</th>\n",
+       "      <td>Organic Large Grade AA Eggs</td>\n",
+       "      <td>488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4009</th>\n",
+       "      <td>Organic Ginger Root</td>\n",
+       "      <td>52087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4019</th>\n",
+       "      <td>Organic Carrot Bunch</td>\n",
+       "      <td>35820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4021</th>\n",
+       "      <td>Organic Madagascar Vanilla Ice Cream</td>\n",
+       "      <td>380</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1010 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "5035"
+       "                              product_name  organic_orders\n",
+       "0                 Organic Bulgarian Yogurt             699\n",
+       "1       Organic Whole Peeled Plum Tomatoes            1289\n",
+       "5                     Organic Lentil Beans            3287\n",
+       "10                     Organic Heavy Cream             822\n",
+       "13              Organic White Wine Vinegar            1121\n",
+       "...                                    ...             ...\n",
+       "4001                   Organic Red Lentils            7836\n",
+       "4005           Organic Large Grade AA Eggs             488\n",
+       "4009                   Organic Ginger Root           52087\n",
+       "4019                  Organic Carrot Bunch           35820\n",
+       "4021  Organic Madagascar Vanilla Ice Cream             380\n",
+       "\n",
+       "[1010 rows x 2 columns]"
       ]
      },
-     "execution_count": 744,
+     "execution_count": 902,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#15.1 Query everything with the keyword \"organic\" in its name\n",
-    "query = '''SELECT *\n",
-    "            FROM products\n",
-    "            WHERE product_name LIKE \"%Organic%\"'''\n",
-    "\n",
-    "spark.sql(query).count()"
+    "organic_side_df = total_organic_orders[org_and_non_org_df]\n",
+    "organic_side_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 903,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "987\n",
+      "1010\n",
+      "0                      Organic Wild Watermelon Chewing Gum\n",
+      "1        Organic Pineapple Tidbits in 100% Pineapple Juice\n",
+      "2          Organic Rice Dream Frozen Vanilla Dessert Bites\n",
+      "3              Organic Warm & Crunchy Honey Almond Granola\n",
+      "4                    Organic Spicy Red Napa Cabbage Kimchi\n",
+      "                               ...                        \n",
+      "29334    Organic Easy Mac Original Flavor Macaroni & Ch...\n",
+      "29335                   Organic Jalapeno Nacho Slices Mild\n",
+      "29336                            Organic Gojiberry Nut Bar\n",
+      "29337         Organic Hot (101305, 101352) Italian Sausage\n",
+      "29338              Organic Delights Lemon Supreme Bars Mix\n",
+      "Name: product_name, Length: 29339, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Make a series with all the words added with 'Organic ' then compare with 1010 organic products\n",
+    "print(len(non_organic_names_list))\n",
+    "print(len(organic_names_list))\n",
+    "\n"
    ]
   },
   {
