have a basis to start hypothesis now

--- a/Capstone 1 Instacart.ipynb
+++ b/Capstone 1 Instacart.ipynb
@@ -2414,18 +2414,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 926,
+   "execution_count": 940,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Organic Chunky Medium Salsa', 'Organic Cranberry Walnut Salad', 'Organic Papaya', 'Organic Raw Cashews', 'Organic Whole Peeled Plum Tomatoes']\n",
-      "['Chunky Medium Salsa', 'Cranberry Walnut Salad', 'Papaya', 'Raw Cashews', 'Whole Peeled Plum Tomatoes']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# #Check\n",
     "# print(sorted(organic_names_list[:5]))\n",
@@ -2434,18 +2425,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 928,
+   "execution_count": 939,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "953\n",
-      "953\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Check\n",
     "organic_names_series = pd.Series(sorted(organic_names_list))\n",
@@ -2456,176 +2438,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 936,
+   "execution_count": 950,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "953\n",
-      "<class 'pandas.core.series.Series'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# organicc_df = organic_names_series.isin(total_organic_orders.product_name)\n",
-    "# non_organicc_df = non_organic_names_series.isin(total_non_organic_orders.product_name)\n",
-    "# print(organicc_df)\n",
-    "# print(non_organicc_df)\n",
-    "\n",
+    "#Create booling series for broadcasting on each dataframe\n",
     "non_org_bool_filter = total_non_organic_orders.product_name.isin(non_organic_names_series)\n",
-    "org_bool_filter = total_organic_orders.product_name.isin(organic_names_series)\n"
+    "org_bool_filter = total_organic_orders.product_name.isin(organic_names_series)\n",
+    "\n",
+    "# print(len(non_org_bool_filter))\n",
+    "# print(sum(non_org_bool_filter))\n",
+    "\n",
+    "# print(len(org_bool_filter))\n",
+    "# print(sum(org_bool_filter))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 902,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>product_name</th>\n",
-       "      <th>organic_orders</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Organic Bulgarian Yogurt</td>\n",
-       "      <td>699</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Organic Whole Peeled Plum Tomatoes</td>\n",
-       "      <td>1289</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Organic Lentil Beans</td>\n",
-       "      <td>3287</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Organic Heavy Cream</td>\n",
-       "      <td>822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Organic White Wine Vinegar</td>\n",
-       "      <td>1121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4001</th>\n",
-       "      <td>Organic Red Lentils</td>\n",
-       "      <td>7836</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4005</th>\n",
-       "      <td>Organic Large Grade AA Eggs</td>\n",
-       "      <td>488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4009</th>\n",
-       "      <td>Organic Ginger Root</td>\n",
-       "      <td>52087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4019</th>\n",
-       "      <td>Organic Carrot Bunch</td>\n",
-       "      <td>35820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4021</th>\n",
-       "      <td>Organic Madagascar Vanilla Ice Cream</td>\n",
-       "      <td>380</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1010 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              product_name  organic_orders\n",
-       "0                 Organic Bulgarian Yogurt             699\n",
-       "1       Organic Whole Peeled Plum Tomatoes            1289\n",
-       "5                     Organic Lentil Beans            3287\n",
-       "10                     Organic Heavy Cream             822\n",
-       "13              Organic White Wine Vinegar            1121\n",
-       "...                                    ...             ...\n",
-       "4001                   Organic Red Lentils            7836\n",
-       "4005           Organic Large Grade AA Eggs             488\n",
-       "4009                   Organic Ginger Root           52087\n",
-       "4019                  Organic Carrot Bunch           35820\n",
-       "4021  Organic Madagascar Vanilla Ice Cream             380\n",
-       "\n",
-       "[1010 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 902,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "organic_side_df = total_organic_orders[org_and_non_org_df]\n",
-    "organic_side_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 903,
+   "execution_count": 957,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "987\n",
-      "1010\n",
-      "0                      Organic Wild Watermelon Chewing Gum\n",
-      "1        Organic Pineapple Tidbits in 100% Pineapple Juice\n",
-      "2          Organic Rice Dream Frozen Vanilla Dessert Bites\n",
-      "3              Organic Warm & Crunchy Honey Almond Granola\n",
-      "4                    Organic Spicy Red Napa Cabbage Kimchi\n",
-      "                               ...                        \n",
-      "29334    Organic Easy Mac Original Flavor Macaroni & Ch...\n",
-      "29335                   Organic Jalapeno Nacho Slices Mild\n",
-      "29336                            Organic Gojiberry Nut Bar\n",
-      "29337         Organic Hot (101305, 101352) Italian Sausage\n",
-      "29338              Organic Delights Lemon Supreme Bars Mix\n",
-      "Name: product_name, Length: 29339, dtype: object\n"
+      "                              product_name  organic_orders\n",
+      "0                 Organic Bulgarian Yogurt             699\n",
+      "1       Organic Whole Peeled Plum Tomatoes            1289\n",
+      "5                     Organic Lentil Beans            3287\n",
+      "10                     Organic Heavy Cream             822\n",
+      "13              Organic White Wine Vinegar            1121\n",
+      "...                                    ...             ...\n",
+      "4001                   Organic Red Lentils            7836\n",
+      "4005           Organic Large Grade AA Eggs             488\n",
+      "4009                   Organic Ginger Root           52087\n",
+      "4019                  Organic Carrot Bunch           35820\n",
+      "4021  Organic Madagascar Vanilla Ice Cream             380\n",
+      "\n",
+      "[953 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
-    "#Make a series with all the words added with 'Organic ' then compare with 1010 organic products\n",
-    "print(len(non_organic_names_list))\n",
-    "print(len(organic_names_list))\n",
+    "non_organiccc_df = total_non_organic_orders[non_org_bool_filter]\n",
+    "organiccc_df = total_organic_orders[org_bool_filter]\n",
+    "\n",
+    "# print((non_organiccc_df))\n",
+    "# print((organiccc_df))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 959,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total of Organic Products Ordered:  5959541\n",
+      "Total of NON Organic Products Ordered:  4169490\n"
+     ]
+    }
+   ],
+   "source": [
+    "#graph this monster\n",
+    "org_total = sum(organiccc_df['organic_orders'])\n",
+    "non_org_total = sum(non_organiccc_df['non_organic_orders'])\n",
+    "\n",
+    "print('Total of Organic Products Ordered: ', org_total)\n",
+    "print('Total of NON Organic Products Ordered: ', non_org_total)\n",
     "\n"
    ]
   },
