--- a/InstacartAnalysis.ipynb
+++ b/InstacartAnalysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Capstone 1: Instacart"
+    "## Instacart Analysis"
    ]
   },
   {
@@ -2929,7 +2929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
